--- a/Week 2.html
+++ b/Week 2.html
@@ -23,7 +23,8 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href=Week%202.html>assignments</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href=Week%201.html>Week 1</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href=Week%202.html>Week 2</a></li>
                     </ul>
                 </div>
             </div>
@@ -70,9 +71,11 @@
                         <p>
                        Schemes after convert to PNG to be read. 
                          </p>   
-                        <img src="contact.html" alt="PNG">
+                        <img src="" alt="PNG">
                         <p>   
-        
+        </p>   
+                        <img src="contact.html" alt="PNG">
+                        <p>  
                         <p>
                         2- As we are using Rolland milling machine we choose the output to be Roland mill (.rml). Below are the setting prosses: 
                         </p>
