update elecronic prodection pics

--- a/Week 2.html
+++ b/Week 2.html
@@ -63,27 +63,27 @@
                         <p>
                         Scemese before: 
                         </p>   
-                        <img src="fts_mini_traces.html" alt="scheme">
+                        <img src="assets/Electronic%2520production/fts_mini_cut.png" alt="scheme">
                         <p>
                      <p>
                         </p>   
-                        <img src="" alt="scheme2">
+                        <img src="assets/Electronic%2520production/fts_mini_traces.png" alt="scheme2">
                         <p>
                        Schemes after convert to PNG to be read. 
                          </p>   
-                        <img src="" alt="PNG">
+                        <img src="assets/Electronic%2520production/png.jpg" alt="PNG">
                         <p>   
         </p>   
-                        <img src="contact.html" alt="PNG">
+                        <img src="assets/Electronic%2520production/png2.jpg" alt="PNG">
                         <p>  
                         <p>
                         2- As we are using Rolland milling machine we choose the output to be Roland mill (.rml). Below are the setting prosses: 
                         </p>
                         <P> <b>The prosses of outline setting:<p></b>
                             PCB Traces (1/64) – refers to the traces milling bit size.<br>
-                            PCB Outline (1/32) – refers to the outline milling bit size.</P><br>
+                            PCB Outline (1/32) – refers to the outline milling bit size.</P> Output sitting shows bellow: 
                     <p>   
-                        <img src="Screenshot 2022-01-25 102805.html" alt="output">
+                        <img src="assets/Electronic%2520production/outpot%20.jpg" alt="output">
                         <p>
                             
                     <p>
