--- a/Week 2.html
+++ b/Week 2.html
@@ -96,7 +96,7 @@
                        <p><img src= "C:\Users\eyye2\OneDrive\Desktop\myfabacademy\batoolwebsite\assets\Electronic production\WhatsApp Image 2022-02-02 at 4.30.40 PM.jpeg" style="width:600px;height:400px;" alt="machine"> 
                            <p>
                         </p>
-                           In my first try the pin broke, because I forgot to put the Z axis in zero. So I had to do the stap agin, and make sure to put the Z zero.
+                           In my first try the pin broke, because I forgot to put the Z axis in zero. So I had to do the stap agin, and make sure to put the Z zero.<br>
                         
                          <img src= "C:\Users\eyye2\OneDrive\Desktop\myfabacademy\batoolwebsite\assets\Electronic production\WhatsApp Image 2022-02-02 at 4.30.41 PM.jpeg" style="width:500px;height:200px;" alt="broken">  
                           <p>
