update week 2 pic

--- a/Week 2.html
+++ b/Week 2.html
@@ -63,7 +63,7 @@
                         <p>
                         Scemese before: 
                         </p>   
-                        <img src="C:\Users\eyye2\OneDrive\Desktop\myfabacademy\batoolwebsite\assets\Electronic production\fts_mini_traces.png" style="width:600px;height:200px;" alt="scheme">
+                        <img src="C:\Users\eyye2\OneDrive\Desktop\myfabacademy\batoolwebsite\assets\Electronic production\fts_mini_traces.png"style="width:600px;height:200px;" alt="scheme">
                         <p>
                      <p>
                         </p>   
@@ -122,8 +122,9 @@
                       1.1. First I Install WinAVR 20100110   and launch it.<br>
                         <br>  1.2. In WinAVR folder there is a bin folder I deleted avrdude.conf  and avrdude from it. Then replace them with <a href=http://download.savannah.gnu.org/releases/avrdude/>Version 6.3 2016.<a> <br><p></p>
                          1.3. In control panel >> systems >> advanced system settings >> environment variables >> path >> edit >> delete the old AVR path (if installed) >> add the new path of the bin folder by copping its location (../WinAvr/bin)
-
-
+                          <br><p></p> <b>2- Zadig:<p></b> 
+2.2 Donlowd  <a href=https://zadig.akeo.ie/>Zadig</a> is a windows application that installs generic USB drivers, like WinUSB and it hepls to access USB devices.
+                        
             </div>
         </article>
         <!-- Footer-->
