--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Week%201.html">week 1</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Week%202.html">week 2</a></li> 
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Weekly%20Assignments.html">Assignments</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="student%20agreement.html">Student Agreement</a></li>
                     </ul>
                 </div>
             </div>
